<resources>
    <string name="app_name">Weather</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_city">Select city</string>
    <string name="select_season">Select season</string>
    <string name="type">Type: %s</string>
    <string name="temperature">Temperature: %s</string>
    <string name="winter">Winter</string>
    <string name="spring">Spring</string>
    <string name="summer">Summer</string>
    <string name="autumn">Autumn</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="big">Big</string>
    <string name="add_city_info">Add city info</string>
    <string name="select_temperature_system_label">Select temperature system:</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="temperature_is">Temperature is:</string>
    <string name="search">Search</string>
    <string name="all_cities_label">All cities:</string>
    <string name="name_hint">Name</string>
    <string name="enter_the_name_of_the_city_label">Enter the name of the city</string>
    <string name="temperature_by_month_label">Temperature by month</string>
    <string name="select_the_type_of_city_label">Select the type of city</string>
</resources>