<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.weather.settings.SettingsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".settings.SettingsFragment">

        <TextView
            android:id="@+id/enter_city_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="6dp"
            android:text=" Enter the name of the city"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_text_city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="6dp"
            android:ems="10"
            android:hint="Name"
            android:inputType="text"
            android:text="@={viewModel.cityName}" />

        <TextView
            android:id="@+id/select_city_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:text="Select the type of city"
            android:textSize="16sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:onClick="@{() -> viewModel.radioButtonBig()}"
                android:text="@string/big" />

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.radioButtonMedium()}"
                android:text="@string/medium" />

            <RadioButton
                android:id="@+id/radioButton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.radioButtonSmall()}"
                android:text="@string/small" />

        </RadioGroup>

        <TextView
            android:id="@+id/temperature_by_month_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="6dp"
            android:text="Temperature by month"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/seasons_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/material_motion_duration_short_1"
                android:checked="true"
                android:onClick="@{() -> viewModel.radioButtonWinter()}"
                android:text="@string/winter" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/material_motion_duration_short_1"
                android:onClick="@{() -> viewModel.radioButtonSpring()}"
                android:text="@string/spring" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/material_motion_duration_short_1"
                android:onClick="@{() -> viewModel.radioButtonSummer()}"
                android:text="@string/summer" />

            <RadioButton
                android:id="@+id/radioButton7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/material_motion_duration_short_1"
                android:onClick="@{() -> viewModel.radioButtonAutumn()}"
                android:text="@string/autumn" />
        </RadioGroup>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextFirstMonth"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="36dp"
                android:layout_marginBottom="6dp"
                android:layout_toEndOf="@id/textView"
                android:inputType="numberSigned"
                android:text="@={viewModel.temp1String}"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="54sp"
                android:layout_height="20sp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="36dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="6dp"
                android:text="@{viewModel.season.value[0]}"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextSecondMonth"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="36dp"
                android:layout_marginBottom="6dp"
                android:layout_toEndOf="@id/textView"
                android:inputType="numberSigned"
                android:text="@={viewModel.temp2String}"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="20sp"
                android:layout_below="@id/textView"
                android:layout_alignParentStart="true"
                android:layout_marginStart="36dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="6dp"
                android:text="@{viewModel.season.value[1]}"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextThirdMonth"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView1"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="36dp"
                android:layout_marginBottom="6dp"
                android:layout_toEndOf="@id/textView"
                android:inputType="numberSigned"
                android:text="@={viewModel.temp3String}"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="20sp"
                android:layout_below="@id/textView1"
                android:layout_alignParentStart="true"
                android:layout_marginStart="36dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="6dp"
                android:text="@{viewModel.season.value[2]}"
                android:textSize="16sp" />

        </RelativeLayout>

        <Button
            android:id="@+id/add_info_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="6dp"
            android:onClick="@{() -> viewModel.addInfoButton()}"
            android:text="@string/add_city_info"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/all_cities_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:text="All cities:"
            android:textSize="16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/all_cities_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="6dp" />

    </LinearLayout>
</layout>